Python Fundamentals -part I.txt
Last login: Fri Jul 23 15:54:09 on ttys005
(base) Chriss-MacBook-Pro:~ lionshare$ python
Python 3.7.9 (default, Aug 31 2020, 07:22:35) 
[Clang 10.0.0 ] :: Anaconda, Inc. on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> print("Hello World!")
Hello World!
>>> input(data science)
  File "<stdin>", line 1
    input(data science)
                     ^
SyntaxError: invalid syntax
>>> print('data science')
data science
>>> a = 5
>>> if a == 5:
...     print("a equals 5")
... 
a equals 5
>>> my string = 'hellow world'
  File "<stdin>", line 1
    my string = 'hellow world'
            ^
SyntaxError: invalid syntax
>>> mystring = 'hellow world'
>>> print(type(mystring))
<class 'str'>
>>> n = 10
>>> print(type(n))
<class 'int'>
>>> n_float = 7.5
>>> print(type(n_float))
<class 'float'>
>>> single_string = 'Its a single quote string'
>>> print(single_string)
Its a single quote string
>>> double_string = "its a double quote string"
>>> print(double_string)
its a double quote string
>>> n1 = 5
>>> n2 = 7.5
>>> print(n1+n2)
12.5
>>> nstrl = "abc"
>>> print(nstrl + nl)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'nl' is not defined
>>> print(nstrl+nl)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'nl' is not defined
>>> nstrl = "abc"
>>> print(nstrl + n1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate str (not "int") to str
>>> print(nstrl+n1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate str (not "int") to str
>>> nostrl = "abc"
>>> print(nstr1 + n1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'nstr1' is not defined
>>> nstr1 = "abc"
>>> print(nstr1 + n1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate str (not "int") to str
>>> nstr2 = "def"
>>> print(nstr1 + nstr2)
abcdef
>>> n1, n2 = 10, 11
>>> n1
10
>>> n2
11
>>> result = 3 + 4.0 / 2 * 5
>>> print(result)
13.0
>>> remainder = 17%10
>>> print(remainder)
7
>>> x = 5
>>> n = 4
>>> print(x ** n)
625
>>> nstr = "abc"
>>> ans = nstr * 10
>>> print(len(ans))
30
>>> name = "Harshit"
>>> print("%s us a data scienctist!" %name)
Harshit us a data scienctist!
>>> print("%s is a data scientist!" %name)
Harshit is a data scientist!
>>> name.upper()
'HARSHIT'
>>> name.lower()
'harshit'
>>> nstr = "it is a nice day today."
>>> nstr.capitalize()
'It is a nice day today.'
>>> name.index('s')
3
>>> name[2:5]
'rsh'
>>> name[2:6:2]
'rh'
>>> alist = [3,4,5]
>>> print(alist)
[3, 4, 5]
>>> alist = ['harshit', 2, 5.5]
>>> print(alist)
['harshit', 2, 5.5]
>>> alist.append(10)
>>> alist.append(15)
>>> print(alist)
['harshit', 2, 5.5, 10, 15]
>>> alist.pop()
15
>>> print(alist)
['harshit', 2, 5.5, 10]
>>> alist[3]
10
>>> alist[1:]
[2, 5.5, 10]
>>> alist.append([1,2,3])
>>> print(alist)
['harshit', 2, 5.5, 10, [1, 2, 3]]
>>> alist*2
['harshit', 2, 5.5, 10, [1, 2, 3], 'harshit', 2, 5.5, 10, [1, 2, 3]]
>>> alist + alist
['harshit', 2, 5.5, 10, [1, 2, 3], 'harshit', 2, 5.5, 10, [1, 2, 3]]
>>> 
